--- a/app/src/main/res/layout/dialog_user_detail.xml
+++ b/app/src/main/res/layout/dialog_user_detail.xml
@@ -4,17 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="@dimen/large_text_size"
     android:background="@drawable/dialog_background"
     >
 
     <ImageView
-        android:id="@+id/userDetailPicture"
+        android:id="@+id/userIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/baseline_account_circle_24"
-        android:padding="60dp"
-        android:scaleX="5"
-        android:scaleY="5"
+        android:layout_margin="@dimen/medium_text_size"
+        android:padding="5dp"
+        android:scaleX="2"
+        android:scaleY="2"
+        android:background="@drawable/dialog_background"
+        android:backgroundTint="@color/ivory"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -28,9 +32,10 @@
         android:textSize="@dimen/medium_text_size"
         android:textColor="?attr/colorOnPrimary"
         android:textStyle="bold"
+        android:layout_marginVertical="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/userDetailPicture"
+        app:layout_constraintTop_toBottomOf="@id/userIcon"
         app:layout_constraintBottom_toTopOf="@id/logoutButton"
         android:text="@string/user_name_placeholder" />
 
