--- a/app/src/main/res/layout/dialog_user_detail.xml
+++ b/app/src/main/res/layout/dialog_user_detail.xml
@@ -1,12 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/large_text_size"
+    android:paddingVertical="20dp"
     android:background="@drawable/dialog_background"
     >
+
+    <TextView
+        android:id="@+id/userIconHint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="@string/user_icon_title"
+        android:textStyle="bold"
+        android:textSize="@dimen/medium_text_size"
+        android:textColor="?attr/colorOnPrimary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/userIcon"
+        />
 
     <ImageView
         android:id="@+id/userIcon"
@@ -19,25 +32,34 @@
         android:scaleY="2"
         android:background="@drawable/dialog_background"
         android:backgroundTint="@color/ivory"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:contentDescription="@string/user_profile_pic_desc"
         />
 
-    <TextView
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/userDetailName"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/medium_text_size"
-        android:textColor="?attr/colorOnPrimary"
-        android:textStyle="bold"
+        android:minWidth="300dp"
+        style="@style/EditTextLayout"
         android:layout_marginVertical="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/userIcon"
+        app:layout_constraintTop_toBottomOf="@id/userIconHint"
         app:layout_constraintBottom_toTopOf="@id/logoutButton"
-        android:text="@string/user_name_placeholder" />
+        app:counterEnabled="true"
+        app:counterMaxLength="15"
+        >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/ivory"
+            android:textColor="?attr/colorOnPrimary"
+            android:hint="@string/user_name_hint" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/logoutButton"
