Spinner style + confirm remove dialog

--- a/app/src/main/res/layout/dialog_chore_detail.xml
+++ b/app/src/main/res/layout/dialog_chore_detail.xml
@@ -74,12 +74,12 @@
         android:layout_height="wrap_content"
         android:minWidth="200dp"
         android:textColor="?attr/colorOnPrimary"
-        android:backgroundTint="@color/ivory"
         app:layout_constraintStart_toEndOf="@id/choreDetailAssignedToText"
         app:layout_constraintTop_toTopOf="@id/choreDetailAssignedToText"
         app:layout_constraintBottom_toBottomOf="@id/choreDetailAssignedToText"
         android:layout_marginStart="10dp"
         android:background="@android:drawable/editbox_background"
+        android:backgroundTint="@color/ivory"
         android:drawablePadding="16dp"
         android:hint="@string/chore_detail_assign_hint"
         android:textColorHint="?attr/colorOnPrimary"
@@ -105,6 +105,8 @@
         android:hint=""
         android:textColor="?attr/colorOnPrimary"
         android:layout_marginStart="20dp"
+        android:background="@android:drawable/editbox_background"
+        android:backgroundTint="@color/ivory"
         app:layout_constraintBottom_toBottomOf="@id/choreDetailTimeToDoText"
         app:layout_constraintStart_toEndOf="@id/choreDetailTimeToDoText"
         app:layout_constraintTop_toTopOf="@id/choreDetailTimeToDoText"
@@ -137,6 +139,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="?attr/colorOnPrimary"
+        android:textStyle="bold"
         app:layout_constraintTop_toTopOf="@id/choreDetailRewardText"
         app:layout_constraintBottom_toBottomOf="@id/choreDetailRewardText"
         app:layout_constraintStart_toEndOf="@id/choreDetailRewardText"
@@ -158,8 +161,11 @@
         android:id="@+id/choreDetailIsTimedBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:minHeight="0dp"
+        android:minWidth="0dp"
         android:layout_marginStart="20dp"
         android:textColor="?attr/colorOnPrimary"
+        android:background="@color/ivory"
         app:layout_constraintTop_toTopOf="@id/choreDetailIsTimedText"
         app:layout_constraintBottom_toBottomOf="@id/choreDetailIsTimedText"
         app:layout_constraintStart_toEndOf="@id/choreDetailIsTimedText"
@@ -195,6 +201,7 @@
         app:layout_constraintTop_toTopOf="@id/choreDetailDueText"
         app:layout_constraintBottom_toBottomOf="@id/choreDetailDueText"
         app:layout_constraintStart_toEndOf="@id/choreDetailDueDate"
+        android:layout_marginStart="10dp"
         android:text="@string/chore_detail_at" />
 
     <TextView
@@ -205,6 +212,8 @@
         app:layout_constraintTop_toTopOf="@id/choreDetailDueText"
         app:layout_constraintBottom_toBottomOf="@id/choreDetailDueText"
         app:layout_constraintStart_toEndOf="@id/choreDetailDueText"
+        android:background="@android:drawable/editbox_background"
+        android:backgroundTint="@color/ivory"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:layout_marginStart="10dp"
@@ -215,10 +224,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="?attr/colorOnPrimary"
+        android:background="@android:drawable/editbox_background"
+        android:backgroundTint="@color/ivory"
         app:layout_constraintTop_toTopOf="@id/choreDetailDueText"
         app:layout_constraintBottom_toBottomOf="@id/choreDetailDueText"
         app:layout_constraintStart_toEndOf="@id/choreDetailAt"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="10dp"
         android:text="@string/chore_detail_due_time_hint"
         />
 
@@ -234,9 +245,11 @@
 
     <Spinner
         android:id="@+id/choreIntervalSpinner"
+        android:background="@android:drawable/editbox_background"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:backgroundTint="@color/ivory"
         app:layout_constraintTop_toTopOf="@id/choreRepeatText"
         app:layout_constraintBottom_toBottomOf="@id/choreRepeatText"
         app:layout_constraintStart_toEndOf="@id/choreRepeatText"
