--- a/app/src/main/res/layout/chore_spinner_dropdown.xml
+++ b/app/src/main/res/layout/chore_spinner_dropdown.xml
@@ -4,7 +4,8 @@
     android:maxLines="1"
     android:layout_width="match_parent"
     android:textColor="?attr/colorOnPrimary"
-    android:background="?attr/colorPrimary"
-    android:padding="2dp"
+    android:background="@color/ivory"
+    android:padding="10dp"
+    android:layout_marginVertical="5dp"
     android:layout_height="@dimen/large_text_size"
     android:ellipsize="marquee" />
